--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,13 +103,13 @@ net = [
     "cryptography>=43.0.0",
     "requests>=2.32.3",
     "networkx>=3.3",
-    "zmq>=0.0.0",
     "psutil>=6.0.0",
     "textfsm>=1.1.3",
     "pandas>=2.2.2",
     "polars>=1.5.0",
     "pyshark>=0.6",
     "schedule>=1.2.2",
+    "pyzmq>=26.2.0",
 ]
 
 [build-system]
