--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.2.2"
+version = "0.2.3"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -31,6 +31,9 @@ dependencies = [
     "logzero>=1.7.0",
     "sqlalchemy>=2.0.32",
     "openpyxl>=3.1.5",
+    "natural>=0.2.0",
+    "parse>=1.20.2",
+    "humanize>=4.10.0",
 ]
 
 [project.optional-dependencies]
@@ -52,6 +55,13 @@ gis = [
     "networkx>=3.3",
     "dask-image>=2024.5.3",
     "graphviz>=0.20.3",
+    "zarr>=2.18.3",
+    "h5netcdf>=1.3.0",
+    "pydap>=3.5",
+    "scipy>=1.14.1",
+    "cftime>=1.6.4",
+    "iris>=1.0.7",
+    "pint>=0.24.3",
 ]
 ml = [
     "scikit-learn>=1.5.1",
@@ -93,6 +103,7 @@ scieng = [
     "tables>=3.10.1",
     "graphviz>=0.20.3",
     "altair>=5.4.1",
+    "bottleneck>=1.4.0",
 ]
 net = [
     "cryptography>=43.0.0",
