--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,34 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.2.3"
+version = "0.2.4"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "ipython>=8.12.3",
-    "polars>=1.5.0",
-    "matplotlib>=3.7.5",
-    "plotly>=5.23.0",
-    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.2",
-    "numba>=0.60.0",
+    "polars>=1.9.0",
+    "matplotlib>=3.9.2",
+    "plotly>=5.24.1",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
     "numexpr>=2.10.1",
     "h5py>=3.11.0",
     "mypy>=1.11.2",
-    "statsmodels>=0.14.2",
+    "statsmodels>=0.14.4",
     "loguru>=0.7.2",
     "psutil>=6.0.0",
     "memory-profiler>=0.61.0",
     "line-profiler>=4.1.3",
-    "streamlit>=1.38.0",
+    "streamlit>=1.39.0",
     "schedule>=1.2.2",
     "requests>=2.32.3",
     "hvplot>=0.10.0",
-    "numpy>=2.0.2",
+    "numpy>=2.0.2,<2.1",  # numba 0.60.0 depends on numpy>=1.22,<2.1
     "scipy>=1.14.1",
     "black>=24.8.0",
     "isort>=5.13.2",
     "toolz>=0.12.1",
     "logzero>=1.7.0",
-    "sqlalchemy>=2.0.32",
+    "sqlalchemy>=2.0.35",
     "openpyxl>=3.1.5",
     "natural>=0.2.0",
     "parse>=1.20.2",
@@ -39,7 +38,7 @@ dependencies = [
 [project.optional-dependencies]
 gis = [
     "rasterio>=1.3.11",
-    "xarray>=2024.7.0",
+    "xarray>=2024.9.0",
     "geopandas>=1.0.1",
     "folium>=0.17.0",
     "shapely>=2.0.6",
@@ -82,39 +81,40 @@ web = [
     "cryptography>=43.0.0",
 ]
 scieng = [
-    "numpy>=2.0.2",
-    "scipy>=1.14.1",
-    "statsmodels>=0.14.2",
+    # "numpy>=2.0.2",
+    # "scipy>=1.14.1",
+    # "statsmodels>=0.14.4",
+    "numba>=0.60.0",
     "pint>=0.24.3",
     "scikit-image>=0.24.0",
     "dask>=2024.8.2",
-    "matplotlib>=3.9.2",
-    "plotly>=5.23.0",
+    # "matplotlib>=3.9.2",
+    # "plotly>=5.24.1",
     "hvplot>=0.10.0",
     "networkx>=3.3",
-    "pandas>=2.2.2",
-    "numba>=0.60.0",
+    # "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
+    # "numba>=0.60.0",
     "dask-image>=2024.5.3",
     "holoviews>=1.19.1",
     "bokeh>=3.4.3",
-    "streamlit>=1.38.0",
-    "seaborn>=0.13.2",
+    # "streamlit>=1.39.0",
+    # "seaborn>=0.13.2",
     "pyod>=2.0.1",
     "tables>=3.10.1",
-    "graphviz>=0.20.3",
+    # "graphviz>=0.20.3",
     "altair>=5.4.1",
     "bottleneck>=1.4.0",
 ]
 net = [
     "cryptography>=43.0.0",
-    "requests>=2.32.3",
+    # "requests>=2.32.3",
     "networkx>=3.3",
     "psutil>=6.0.0",
     "textfsm>=1.1.3",
-    "pandas>=2.2.2",
-    "polars>=1.5.0",
+    # "pandas>=2.2.2",
+    # "polars>=1.9.0",
     "pyshark>=0.6",
-    "schedule>=1.2.2",
+    # "schedule>=1.2.2",
     "pyzmq>=26.2.0",
 ]
 
