--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.2.6"
+version = "0.2.7"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -34,6 +34,9 @@ dependencies = [
     "natural>=0.2.0",
     "parse>=1.20.2",
     "humanize>=4.10.0",
+    "keyrings-cryptfile>=1.3.9",
+    "keyring>=25.4.1",
+    "diskcache>=5.6.3",
 ]
 
 [project.optional-dependencies]
@@ -107,6 +110,8 @@ scieng = [
     # "graphviz>=0.20.3",
     "altair>=5.4.1",
     "bottleneck>=1.4.0",
+    "graphviz>=0.20.3",
+    "zarr>=2.18.3",
 ]
 net = [
     "cryptography>=43.0.0",
@@ -119,6 +124,12 @@ net = [
     "pyshark>=0.6",
     # "schedule>=1.2.2",
     "pyzmq>=26.2.0",
+    "aiopath>=0.6.11",
+    "aiofiles>=24.1.0",
+    "anyio>=3.7.1",
+    "httpx>=0.27.2",
+    "s3fs>=2024.9.0",
+    "aiobotocore>=2.15.1",
 ]
 
 [build-system]
