--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.2.8"
+version = "0.2.9"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -132,6 +132,22 @@ net = [
     "s3fs>=2024.9.0",
     "aiobotocore>=2.15.1",
     "distributed>=2024.9.1",
+]
+dl = [
+    "dataset>=1.5.2",
+    "diskcache>=5.6.3",
+    "eli5>=0.13.0",
+    "evaluate>=0.4.3",
+    "more-itertools>=10.5.0",
+    "prophet>=1.1.6",
+    "pyod>=2.0.2",
+    "scikit-learn>=1.5.2",
+    "skorch>=1.0.0",
+    "tensorboard>=2.18.0",
+    "textdistance>=4.6.3",
+    "transformers>=4.46.2",
+    "xgboost>=2.1.1",
+    "yellowbrick>=1.5",
 ]
 
 [build-system]
