--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.2.9"
+version = "0.2.10"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -37,6 +37,8 @@ dependencies = [
     "keyrings-cryptfile>=1.3.9",
     "keyring>=25.4.1",
     "diskcache>=5.6.3",
+    "duckdb>=1.1.3",
+    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
 ]
 
 [project.optional-dependencies]
