Add contextily and descartes GIS dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,8 @@ gis = [
     "psycopg2-binary>=2.9.10",
     "geoalchemy>=0.7.2",
     "geopy>=2.4.1",
+    "contextily>=1.6.2",
+    "descartes>=1.1.0",
 ]
 ml = [
     "scikit-learn>=1.5.1",
