--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,11 @@ dependencies = [
     "diskcache>=5.6.3",
     "duckdb>=1.1.3",
     "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
+    "ftputil>=5.1.0",
+    "lxml>=5.3.0",
+    "pydantic>=2.9.2",
+    "pyjanitor>=0.30.0",
+    "seaborn>=0.13.2",
 ]
 
 [project.optional-dependencies]
@@ -55,7 +60,6 @@ gis = [
     "pysal>=24.7",
     "rioxarray>=0.17.0",
     "scikit-image>=0.24.0",
-    "seaborn>=0.13.2",
     "netcdf4>=1.7.1.post2",
     "networkx>=3.3",
     "dask-image>=2024.5.3",
@@ -109,7 +113,6 @@ scieng = [
     "holoviews>=1.19.1",
     "bokeh>=3.4.3",
     # "streamlit>=1.39.0",
-    # "seaborn>=0.13.2",
     "pyod>=2.0.1",
     "tables>=3.10.1",
     # "graphviz>=0.20.3",
