--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "pydantic>=2.9.2",
     "pyjanitor>=0.30.0",
     "seaborn>=0.13.2",
+    "fastexcel>=0.12.1",
+    "connectorx>=0.4.1",
 ]
 
 [project.optional-dependencies]
