--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.3.3"
+version = "0.4.0"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "ipython>=8.12.3",
-    "polars>=1.9.0",
+    "polars>=1.22.0",
     "matplotlib>=3.9.2",
     "plotly>=5.24.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
@@ -23,8 +23,8 @@ dependencies = [
     "requests>=2.32.3",
     "hvplot>=0.10.0",
     # numba 0.60.0 depends on numpy>=1.22,<2.1:
-    "numpy>=2.0.2,<2.1",
-    "scipy>=1.14.1",
+    "numpy>=2.0.2",
+    "scipy>=1.15",
     "black>=24.8.0",
     "isort>=5.13.2",
     "toolz>=0.12.1",
@@ -43,9 +43,6 @@ dependencies = [
     "lxml>=5.3.0",
     "pydantic>=2.9.2",
     "pyjanitor>=0.30.0",
-    "seaborn>=0.13.2",
-    "fastexcel>=0.12.1",
-    "connectorx>=0.4.1",
 ]
 
 [project.optional-dependencies]
@@ -69,7 +66,7 @@ gis = [
     "zarr>=2.18.3",
     "h5netcdf>=1.3.0",
     "pydap>=3.5",
-    "scipy>=1.14.1",
+    "scipy>=1.15",
     "cftime>=1.6.4",
     "iris>=1.0.7",
     "pint>=0.24.3",
@@ -99,10 +96,10 @@ web = [
     "cryptography>=43.0.0",
 ]
 scieng = [
-    # "numpy>=2.0.2",
-    # "scipy>=1.14.1",
-    # "statsmodels>=0.14.4",
-    "numba>=0.60.0",
+    "numba>=0.61.0",
+    "seaborn>=0.13.2",
+    "fastexcel>=0.12.1",
+    "connectorx>=0.4.1",
     "pint>=0.24.3",
     "scikit-image>=0.24.0",
     "dask>=2024.8.2",
@@ -131,8 +128,6 @@ net = [
     "networkx>=3.3",
     "psutil>=6.0.0",
     "textfsm>=1.1.3",
-    # "pandas>=2.2.2",
-    # "polars>=1.9.0",
     "pyshark>=0.6",
     # "schedule>=1.2.2",
     "pyzmq>=26.2.0",
