--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "lxml>=5.3.0",
     "pydantic>=2.9.2",
     "pyjanitor>=0.30.0",
+    "pytest>=8.3.5",
 ]
 
 [project.optional-dependencies]
