--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,10 +91,31 @@ ml = [
 web = [
     "flask>=3.0.3",
     "httpx>=0.27.2",
-    "fastapi>=0.112.3",
+    "fastapi>=0.115.8",
     "alembic>=1.13.2",
     "django>=5.1.1",
     "cryptography>=43.0.0",
+]
+analytics = [
+    "numba>=0.61.0",
+    "seaborn>=0.13.2",
+    "fastexcel>=0.12.1",
+    "connectorx>=0.4.1",
+    "dask>=2024.8.2",
+    # "matplotlib>=3.9.2",
+    "hvplot>=0.10.0",
+    "networkx>=3.3",
+    # "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
+    "holoviews>=1.19.1",
+    "bokeh>=3.4.3",
+    # "streamlit>=1.39.0",
+    "pyod>=2.0.1",
+    "tables>=3.10.1",
+    # "graphviz>=0.20.3",
+    "altair>=5.4.1",
+    "bottleneck>=1.4.0",
+    "graphviz>=0.20.3",
+    "distributed>=2024.9.1",
 ]
 scieng = [
     "numba>=0.61.0",
@@ -123,12 +144,10 @@ scieng = [
 ]
 net = [
     "cryptography>=43.0.0",
-    # "requests>=2.32.3",
     "networkx>=3.3",
     "psutil>=6.0.0",
     "textfsm>=1.1.3",
     "pyshark>=0.6",
-    # "schedule>=1.2.2",
     "pyzmq>=26.2.0",
     "aiopath>=0.6.11",
     "aiofiles>=24.1.0",
@@ -140,6 +159,13 @@ net = [
     "fastapi>=0.115.8",
     "uvicorn>=0.34.0",
     "locust>=2.33.2",
+    "aiometer>=0.5.0",
+    "unsync>=1.4.0",
+    "pathos>=0.3.3",
+    "celery>=5.4.0",
+    "redis>=5.2.1",
+    "pytest-repeat>=0.9.3",
+    "aiofile>=3.9.0",
 ]
 dl = [
     "dataset>=1.5.2",
