--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.4.4"
+version = "0.5.0"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -9,22 +9,17 @@ dependencies = [
     "polars>=1.22.0",
     "matplotlib>=3.9.2",
     "plotly>=5.24.0,<6.0.0",
-    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,postgresql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
     "numexpr>=2.10.1",
-    "h5py>=3.11.0",
     "mypy>=1.11.2",
-    "statsmodels>=0.14.4",
     "loguru>=0.7.2",
     "psutil>=6.0.0",
-    "memory-profiler>=0.61.0",
-    "line-profiler>=4.1.3",
     "streamlit>=1.39.0",
     "schedule>=1.2.2",
     "requests>=2.32.3",
     "hvplot>=0.10.0",
     # Numba requires NumPy 2.1 or less:
     "numpy>=2.1.3,<2.2.0",
-    "scipy>=1.15.2",
     "black>=24.8.0",
     "isort>=5.13.2",
     "toolz>=0.12.1",
@@ -37,13 +32,11 @@ dependencies = [
     "keyrings-cryptfile>=1.3.9",
     "keyring>=25.4.1",
     "diskcache>=5.6.3",
-    "duckdb>=1.1.3",
-    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
     "ftputil>=5.1.0",
     "lxml>=5.3.0",
     "pydantic>=2.9.2",
-    "pyjanitor>=0.30.0",
     "pytest>=8.3.5",
+    "more-itertools>=10.6.0",
 ]
 
 [project.optional-dependencies]
@@ -95,47 +88,55 @@ web = [
     "alembic>=1.13.2",
     "django>=5.1.1",
     "cryptography>=43.0.0",
+    "passlib>=1.7.4",
 ]
 analytics = [
+    "duckdb>=1.1.3",
+    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
     "numba>=0.61.0",
+    "matplotlib>=3.9.2",
+    "scipy>=1.15.2",
+    "statsmodels>=0.14.4",
     "seaborn>=0.13.2",
     "fastexcel>=0.12.1",
     "connectorx>=0.4.1",
     "dask>=2024.8.2",
-    # "matplotlib>=3.9.2",
     "hvplot>=0.10.0",
     "networkx>=3.3",
-    # "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
     "holoviews>=1.19.1",
     "bokeh>=3.4.3",
-    # "streamlit>=1.39.0",
     "pyod>=2.0.1",
     "tables>=3.10.1",
-    # "graphviz>=0.20.3",
     "altair>=5.4.1",
     "bottleneck>=1.4.0",
     "graphviz>=0.20.3",
     "distributed>=2024.9.1",
+    "streamlit>=1.39.0",
 ]
 scieng = [
+    "h5py>=3.11.0",
+    "duckdb>=1.1.3",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
     "numba>=0.61.0",
+    "scipy>=1.15.2",
+    "statsmodels>=0.14.4",
     "seaborn>=0.13.2",
     "fastexcel>=0.12.1",
     "connectorx>=0.4.1",
     "pint>=0.24.3",
     "scikit-image>=0.24.0",
     "dask>=2024.8.2",
-    # "matplotlib>=3.9.2",
+    "matplotlib>=3.9.2",
     "hvplot>=0.10.0",
     "networkx>=3.3",
-    # "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
     "dask-image>=2024.5.3",
     "holoviews>=1.19.1",
     "bokeh>=3.4.3",
-    # "streamlit>=1.39.0",
+    "streamlit>=1.39.0",
     "pyod>=2.0.1",
     "tables>=3.10.1",
-    # "graphviz>=0.20.3",
+    "graphviz>=0.20.3",
     "altair>=5.4.1",
     "bottleneck>=1.4.0",
     "graphviz>=0.20.3",
@@ -143,6 +144,7 @@ scieng = [
     "distributed>=2024.9.1",
 ]
 net = [
+    "pandas[aws,fss]>=2.2.3",
     "cryptography>=43.0.0",
     "networkx>=3.3",
     "psutil>=6.0.0",
@@ -166,6 +168,9 @@ net = [
     "redis>=5.2.1",
     "pytest-repeat>=0.9.3",
     "aiofile>=3.9.0",
+    "botocore>=1.36.3",
+    "boto3>=1.36.3",
+    "passlib>=1.7.4",
 ]
 dl = [
     "dataset>=1.5.2",
@@ -182,6 +187,25 @@ dl = [
     "transformers>=4.46.2",
     "xgboost>=2.1.1",
     "yellowbrick>=1.5",
+]
+testing = [
+    "memory-profiler>=0.61.0",
+    "line-profiler>=4.1.3",
+    "hypothesis>=6.129.4",
+    "pycodestyle>=2.12.1",
+    "pylint>=3.3.6",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
+    "pytest-repeat>=0.9.3",
+    "pytest-xdist>=3.6.1",
+    "sphinx>=8.1.3",
+]
+db = [
+    "pandas[compression,fss,hdf5,mysql,postgresql,sql-other]>=2.2.3",
+    "redis>=5.2.1",
+    "sqlalchemy>=2.0.38",
+    "duckdb>=1.1.3",
+    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
 ]
 
 [build-system]
