--- a/pyproject.toml
+++ b/pyproject.toml
@@ -199,6 +199,7 @@ testing = [
     "pytest-repeat>=0.9.3",
     "pytest-xdist>=3.6.1",
     "sphinx>=8.1.3",
+    "mkdocs>=1.6.1",
 ]
 db = [
     "pandas[compression,fss,hdf5,mysql,postgresql,sql-other]>=2.2.3",
