--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,11 +88,13 @@ web = [
     "django>=5.1.1",
     "cryptography>=43.0.0",
     "passlib>=1.7.4",
+    "sqlalchemy>=2.0.35",
 ]
 analytics = [
     "duckdb>=1.1.3",
     "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
+    "sqlalchemy>=2.0.35",
     "numba>=0.61.0",
     "matplotlib>=3.9.2",
     "scipy>=1.15.2",
@@ -207,6 +209,7 @@ db = [
     "sqlalchemy>=2.0.38",
     "duckdb>=1.1.3",
     "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
+    "pyodbc>=5.2.0",
 ]
 
 [build-system]
