--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "pydantic>=2.9.2",
     "pytest>=8.3.5",
     "more-itertools>=10.6.0",
+    "ruff>=0.11.1",
 ]
 
 [project.optional-dependencies]
@@ -203,6 +204,14 @@ testing = [
     "pytest-xdist>=3.6.1",
     "sphinx>=8.1.3",
     "mkdocs>=1.6.1",
+    "flake8-async>=25.3.1",
+    "flake8-import-order>=0.18.2",
+    "isort>=6.0.0",
+    "bandit>=1.8.3",
+    "dodgy>=0.2.1",
+    "pyt>=1.0.5",
+    "black>=25.1.0",
+    "flake8>=7.1.2",
 ]
 db = [
     "pandas[compression,fss,hdf5,mysql,postgresql,sql-other]>=2.2.3",
