--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,8 @@ analytics = [
     "graphviz>=0.20.3",
     "distributed>=2024.9.1",
     "streamlit>=1.39.0",
+    "glum>=3.1.2",
+    "scikit-learn>=1.6.1",
 ]
 scieng = [
     "h5py>=3.11.0",
@@ -144,6 +146,7 @@ scieng = [
     "graphviz>=0.20.3",
     "zarr>=2.18.3",
     "distributed>=2024.9.1",
+    "glum>=3.1.2",
 ]
 net = [
     "pandas[aws,fss]>=2.2.3",
