--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,6 +149,7 @@ scieng = [
     "distributed>=2024.9.1",
     "glum>=3.1.2",
     "formulaic>=1.1.1",
+    "sympy>=1.13.3",
 ]
 net = [
     "pandas[aws,fss]>=2.2.3",
