--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "ipython>=8.12.3",
-    "polars>=1.22.0",
+    "polars[excel,graph,numpy,plot,pyarrow,pydantic,style,timezone]>=1.22.0",
     "matplotlib>=3.9.2",
     "plotly>=5.24.0,<6.0.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,postgresql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
@@ -181,6 +181,7 @@ net = [
     "passlib>=1.7.4",
     "ftputil>=5.1.0",
     "dask>=2025.2.0",
+    "polars[async,fsspec]>=1.22.0",
 ]
 dl = [
     "dataset>=1.5.2",
@@ -220,12 +221,13 @@ testing = [
     "flake8>=7.1.2",
 ]
 db = [
-    "pandas[compression,fss,hdf5,mysql,postgresql,sql-other]>=2.2.3",
+    "pandas[mysql,postgresql,sql-other]>=2.2.3",
     "redis>=5.2.1",
     "sqlalchemy>=2.0.38",
     "duckdb>=1.1.3",
     "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
     "pyodbc>=5.2.0",
+    "polars[database]>=1.22.0",
 ]
 
 [build-system]
