--- a/pyproject.toml
+++ b/pyproject.toml
@@ -225,7 +225,7 @@ db = [
     "redis>=5.2.1",
     "sqlalchemy>=2.0.38",
     "duckdb>=1.1.3",
-    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
+    "ibis-framework[duckdb,mysql,polars,postgres,sqlite]>=9.5.0",
     "pyodbc>=5.2.0",
     "polars[database]>=1.22.0",
 ]
