--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "pytest>=8.3.5",
     "more-itertools>=10.6.0",
     "ruff>=0.11.1",
+    "rich>=13.9.4",
+    "tqdm>=4.67.1",
 ]
 
 [project.optional-dependencies]
