--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "polars[excel,graph,numpy,plot,pyarrow,pydantic,style,timezone]>=1.22.0",
     "matplotlib>=3.9.2",
     "plotly>=5.24.0,<6.0.0",
-    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,postgresql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
     "numexpr>=2.10.1",
     "mypy>=1.11.2",
     "loguru>=0.7.2",
@@ -224,11 +224,11 @@ testing = [
     "flake8>=7.1.2",
 ]
 db = [
-    "pandas[mysql,postgresql,sql-other]>=2.2.3",
+    "pandas[mysql,sql-other]>=2.2.3",
     "redis>=5.2.1",
     "sqlalchemy>=2.0.38",
     "duckdb>=1.1.3",
-    "ibis-framework[duckdb,mysql,polars,postgres,sqlite]>=9.5.0",
+    "ibis-framework[duckdb,mysql,polars,sqlite]>=9.5.0",
     "pyodbc>=5.2.0",
     "polars[database]>=1.22.0",
 ]
