--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "polars[excel,graph,numpy,plot,pyarrow,pydantic,style,timezone]>=1.22.0",
     "matplotlib>=3.9.2",
     "plotly>=5.24.0,<6.0.0",
-    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
     "numexpr>=2.10.1",
     "mypy>=1.11.2",
     "loguru>=0.7.2",
@@ -96,7 +96,7 @@ web = [
 analytics = [
     "duckdb>=1.1.3",
     "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
-    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
     "sqlalchemy>=2.0.35",
     "numba>=0.61.0",
     "matplotlib>=3.9.2",
@@ -125,7 +125,7 @@ analytics = [
 scieng = [
     "h5py>=3.11.0",
     "duckdb>=1.1.3",
-    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,mysql,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
+    "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
     "numba>=0.61.0",
     "scipy>=1.15.2",
     "statsmodels>=0.14.4",
@@ -198,7 +198,6 @@ dl = [
     "skorch>=1.0.0",
     "tensorboard>=2.18.0",
     "textdistance>=4.6.3",
-    "transformers>=4.46.2",
     "xgboost>=2.1.1",
     "yellowbrick>=1.5",
 ]
@@ -224,11 +223,11 @@ testing = [
     "flake8>=7.1.2",
 ]
 db = [
-    "pandas[mysql,sql-other]>=2.2.3",
+    "pandas[sql-other]>=2.2.3",
     "redis>=5.2.1",
     "sqlalchemy>=2.0.38",
     "duckdb>=1.1.3",
-    "ibis-framework[duckdb,mysql,polars,sqlite]>=9.5.0",
+    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
     "pyodbc>=5.2.0",
     "polars[database]>=1.22.0",
 ]
