--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,7 @@ web = [
     "cryptography>=43.0.0",
     "passlib>=1.7.4",
     "sqlalchemy>=2.0.35",
+    "scrapy>=2.12.0",
 ]
 analytics = [
     "duckdb>=1.1.3",
@@ -121,6 +122,7 @@ analytics = [
     "scikit-learn>=1.6.1",
     "formulaic>=1.1.1",
     "textblob>=0.19.0",
+    "textdistance>=4.6.3",
 ]
 scieng = [
     "h5py>=3.11.0",
