--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,8 @@ web = [
     "passlib>=1.7.4",
     "sqlalchemy>=2.0.35",
     "scrapy>=2.12.0",
+    "beautifulsoup4>=4.13.3",
+    "jinja2>=3.1.5",
 ]
 analytics = [
     "duckdb>=1.1.3",
