--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.5.4"
+version = "0.5.5"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -100,7 +100,7 @@ analytics = [
     "duckdb>=1.1.3",
     "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
-    "sqlalchemy>=2.0.35",
+    "sqlalchemy[asyncio]>=2.0.35",
     "numba>=0.61.0",
     "matplotlib>=3.9.2",
     "scipy>=1.15.2",
