--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.5.5"
+version = "0.5.6"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -8,7 +8,7 @@ dependencies = [
     "ipython>=8.12.3",
     "polars[excel,graph,numpy,plot,pyarrow,pydantic,style,timezone]>=1.22.0",
     "matplotlib>=3.9.2",
-    "plotly>=5.24.0,<6.0.0",
+    "plotly>=5.24.0,!=6.0.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
     "numexpr>=2.10.1",
     "mypy>=1.11.2",
