--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "ipython>=8.12.3",
-    "polars[excel,graph,numpy,plot,pyarrow,pydantic,style,timezone]>=1.22.0",
+    "polars[excel,graph,numpy,plot,pyarrow,pydantic,style,timezone]>=1.29.0",
     "matplotlib>=3.9.2",
     "plotly>=5.24.0,!=6.0.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
@@ -14,7 +14,7 @@ dependencies = [
     "mypy>=1.11.2",
     "loguru>=0.7.2",
     "psutil>=6.0.0",
-    "streamlit>=1.39.0",
+    "streamlit>=1.45.0",
     "schedule>=1.2.2",
     "requests>=2.32.3",
     "hvplot>=0.10.0",
@@ -24,7 +24,7 @@ dependencies = [
     "isort>=5.13.2",
     "toolz>=0.12.1",
     "logzero>=1.7.0",
-    "sqlalchemy>=2.0.35",
+    # "sqlalchemy>=2.0.35",
     "openpyxl>=3.1.5",
     "natural>=0.2.0",
     "parse>=1.20.2",
@@ -98,9 +98,9 @@ web = [
 ]
 analytics = [
     "duckdb>=1.1.3",
-    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
+    "ibis-framework[duckdb,polars,sqlite]>=10.5.0",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,spss,sql-other,xml]>=2.2.3",
-    "sqlalchemy[asyncio]>=2.0.35",
+    # "sqlalchemy[asyncio]>=2.0.35",
     "numba>=0.61.0",
     "matplotlib>=3.9.2",
     "scipy>=1.15.2",
@@ -119,7 +119,7 @@ analytics = [
     "bottleneck>=1.4.0",
     "graphviz>=0.20.3",
     "distributed>=2024.9.1",
-    "streamlit>=1.39.0",
+    "streamlit>=1.45.0",
     "glum>=3.1.2",
     "scikit-learn>=1.6.1",
     "formulaic>=1.1.1",
@@ -145,7 +145,7 @@ scieng = [
     "dask-image>=2024.5.3",
     "holoviews>=1.19.1",
     "bokeh>=3.4.3",
-    "streamlit>=1.39.0",
+    "streamlit>=1.45.0",
     "pyod>=2.0.1",
     "tables>=3.10.1",
     "graphviz>=0.20.3",
@@ -188,7 +188,7 @@ net = [
     "passlib>=1.7.4",
     "ftputil>=5.1.0",
     "dask>=2025.2.0",
-    "polars[async,fsspec]>=1.22.0",
+    "polars[async,fsspec]>=1.29.0",
 ]
 dl = [
     "dataset>=1.5.2",
@@ -237,9 +237,9 @@ db = [
     "redis>=5.2.1",
     "sqlalchemy>=2.0.38",
     "duckdb>=1.1.3",
-    "ibis-framework[duckdb,polars,sqlite]>=9.5.0",
+    "ibis-framework[duckdb,polars,sqlite]>=10.5.0",
     "pyodbc>=5.2.0",
-    "polars[database]>=1.22.0",
+    "polars[database]>=1.29.0",
 ]
 
 [build-system]
