--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,11 +74,11 @@ gis = [
     "pydantic-geojson>=0.2.0",
 ]
 ml = [
-    "scikit-learn>=1.5.1",
+    "scikit-learn>=1.5.2",
     "yellowbrick>=1.5",
     "xgboost>=2.1.1",
     "eli5>=0.13.0",
-    "pyod>=2.0.1",
+    "pyod>=2.0.2",
     "textdistance>=4.6.3",
     "skorch>=1.0.0",
     "joblib>=1.4.2",
@@ -195,6 +195,7 @@ dl = [
     "diskcache>=5.6.3",
     "eli5>=0.13.0",
     "evaluate>=0.4.3",
+    "joblib>=1.4.2",
     "more-itertools>=10.5.0",
     "prophet>=1.1.6",
     "pyod>=2.0.2",
