--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.5.8"
+version = "0.5.9"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -79,7 +79,7 @@ ml = [
     "xgboost>=2.1.1",
     "eli5>=0.15.0",
     "pyod>=2.0.5",
-    "textdistance>=4.6.3",
+    "textdistance[extras]>=4.6.3",
     "skorch>=1.0.0",
     "joblib>=1.4.2",
 ]
@@ -124,9 +124,10 @@ analytics = [
     "scikit-learn>=1.6.1",
     "formulaic>=1.1.1",
     "textblob>=0.19.0",
-    "textdistance>=4.6.3",
+    "textdistance[extras]>=4.6.3",
 ]
 scieng = [
+    "pooch>=1.8.2",
     "h5py>=3.11.0",
     "duckdb>=1.1.3",
     "pandas[aws,compression,computation,consortium-standard,excel,feather,fss,hdf5,html,output-formatting,parquet,plot,sql-other,xml]>=2.2.3",
@@ -202,7 +203,7 @@ dl = [
     "scikit-learn>=1.6.1",
     "skorch>=1.0.0",
     "tensorboard>=2.18.0",
-    "textdistance>=4.6.3",
+    "textdistance[extras]>=4.6.3",
     "transformers>=4.49.0",
     "xgboost>=2.1.1",
     "yellowbrick>=1.5",
