--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "requests>=2.32.3",
     "hvplot>=0.10.0",
     # Numba requires NumPy 2.1 or less:
-    "numpy>=2.1.3,<2.2.0",
+    "numpy<2.3.0",
     "black>=24.8.0",
     "isort>=5.13.2",
     "toolz>=0.12.1",
@@ -39,6 +39,7 @@ dependencies = [
     "ruff>=0.11.1",
     "rich>=13.9.4",
     "tqdm>=4.67.1",
+    "numba>=0.61.2",
 ]
 
 [project.optional-dependencies]
