--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.5.12"
+version = "0.6.0a1"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -40,6 +40,8 @@ dependencies = [
     "rich>=13.9.4",
     "tqdm>=4.67.1",
     "numba>=0.61.2",
+    "llm>=0.26",
+    "nbformat>=5.10.4",
 ]
 
 [project.optional-dependencies]
