--- a/pyproject.toml
+++ b/pyproject.toml
@@ -251,6 +251,7 @@ bio = [
     "paramiko>=3.5.1",
     "pooch>=1.8.2",
     "scanpy>=1.11.2",
+    "scikit-image>=0.24.0",
     "tqdm>=4.67.1",
 ]
 docs = [
