--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.7.0"
+version = "0.7.1"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -254,11 +254,12 @@ bio = [
     "scikit-image>=0.24.0",
     "tqdm>=4.67.1",
 ]
+# The 'docs' extra includes support for building course notes using Quarto:
 docs = [
-    # "quarto-cli",
     "nbclient",
     "jupyter",
-    "jupyter-cache"
+    "jupyter-cache",
+    "black"
 ]
 
 [build-system]
