--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.7.2"
+version = "0.7.3"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -248,6 +248,8 @@ db = [
 bio = [
     "anndata>=0.11.4",
     "biopython>=1.85",
+    "igraph>=0.11.9",
+    "leidenalg>=0.10.2",
     "paramiko>=3.5.1",
     "pooch>=1.8.2",
     "scanpy>=1.11.2",
