--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ gis = [
 ]
 ml = [
     "eli5>=0.15.0",
+    "glum>=3.1.2",
     "joblib>=1.4.2",
     "pyod>=2.0.5",
     "scikit-learn>=1.6.1",
@@ -195,6 +196,7 @@ net = [
 ]
 dl = [
     "dataset>=1.5.2",
+    "datasets>=2.2.1",
     "diskcache>=5.6.3",
     "eli5>=0.15.0",
     "evaluate>=0.4.3",
