--- a/pyproject.toml
+++ b/pyproject.toml
@@ -195,6 +195,7 @@ net = [
     "uvicorn>=0.34.0",
 ]
 dl = [
+    "albumentations>=2.0.8",
     "dataset>=1.5.2",
     "datasets>=2.2.1",
     "diskcache>=5.6.3",
