--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.7.6"
+version = "0.7.7"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -10,6 +10,7 @@ dependencies = [
     "humanize>=4.10.0",
     "hvplot>=0.10.0",
     "ipython>=8.12.3",
+    "ipywidgets>=8.1.7",
     "isort>=5.13.2",
     "keyring>=25.4.1",
     "keyrings-cryptfile>=1.3.9",
@@ -209,7 +210,7 @@ dl = [
     "skorch>=1.0.0",
     "tensorboard>=2.18.0",
     "textdistance[Levenshtein]>=4.6.3",
-    "transformers>=4.49.0",
+    "transformers[torch]>=4.49.0",
     "xgboost>=2.1.1",
     "yellowbrick>=1.5",
 ]
