--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ ml = [
     "glum>=3.1.2",
     "joblib>=1.4.2",
     "pyod>=2.0.5",
+    "readability>=0.3.2",
     "scikit-learn>=1.6.1",
     "skorch>=1.0.0",
     "textdistance[Levenshtein]>=4.6.3",
