Add torch, torchaudio, torchvision, and add Intel Mac to required-environments spec; bump version to 0.7.8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythoncharmers-meta"
-version = "0.7.7"
+version = "0.7.8"
 description = "Meta package with dependencies for Python Charmers training courses"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -211,6 +211,9 @@ dl = [
     "skorch>=1.0.0",
     "tensorboard>=2.18.0",
     "textdistance[Levenshtein]>=4.6.3",
+    "torch>=2.2.2",
+    "torchaudio>=2.2.2",
+    "torchvision>=0.17.2",
     "transformers[torch]>=4.49.0",
     "xgboost>=2.1.1",
     "yellowbrick>=1.5",
@@ -274,3 +277,7 @@ docs = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.uv]
+required-environments = [
+    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
+]
